InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingMaterialTracking__c/vlocity_ins__MarketingMaterialTracking__c.object-meta.xml
<CustomObject>
    <description>This object will capture the relationship between Marketing Materials and Marketing Event Attendees who receive those materials. For example, the list of giveaways to the attendees at a specific Marketing Event.</description>
    <label>Marketing Material Tracking</label>
    <nameField>
        <label>Marketing Material Tracking Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Material Tracking Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>