InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingMaterialTracking__c/fields/vlocity_ins__MarketingEventId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MarketingEventId__c</fullName>
    <description>This represents the specific Marketing Event, whose attendee was given a specific Marketing Material.</description>
    <formula>vlocity_ins__MarketingEventRegistrationId__r.vlocity_ins__MarketingEventId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Event</label>
    <type>Text</type>
</CustomField>