InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingMaterialTracking__c/fields/vlocity_ins__MarketingMaterialId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MarketingMaterialId__c</fullName>
    <description>This represents the specific Marketing Material, that has been given to attendees at a specific Marketing Event. For example, the giveaway to attendees at a Marketing Event.</description>
    <label>Marketing Material</label>
    <referenceTo>vlocity_ins__MarketingMaterial__c</referenceTo>
    <relationshipLabel>Marketing Material Tracking Records</relationshipLabel>
    <relationshipName>MarketingMaterialTrackingRecords</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>