InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingMaterialTracking__c/fields/vlocity_ins__Quantity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Quantity__c</fullName>
    <description>This represents the quantity of a specific Marketing Material, that has been given to a specific attendee at a specific Marketing Event. For example, how many of a specific giveaway was given to an attendee at a Marketing Event.</description>
    <label>Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>