InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingMaterialTracking__c/fields/vlocity_ins__TotalValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__TotalValue__c</fullName>
    <description>This is the total value of a specific Marketing Material, given to an attendee at a specific Marketing Event.</description>
    <formula>vlocity_ins__UnitValue__c  *  vlocity_ins__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>