InsuranceOrg/force-app/main/default/objects/vlocity_ins__MarketingMaterialTracking__c/fields/vlocity_ins__UnitValue__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__UnitValue__c</fullName>
    <description>This is the value per unit of the Marketing Material, at the time it was given to an Attendee at a specific Marketing Event. For example, the unit value of a giveaway at a Marketing Event.</description>
    <label>Unit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>